Add start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Use your midi controller to control your Mac",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benjamin Falk <benjamin.falk@cyanjoe.com> (https://github.com/lumio)",
@@ -11,5 +12,8 @@
   "dependencies": {
     "js-yaml": "^3.8.4",
     "midi": "^0.9.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
