--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,24 +1,470 @@
+createdWith: pnpm@0.68.0
 dependencies:
   js-yaml@^3.8.4: 3.8.4
   midi@^0.9.5: 0.9.5
+  nodemon@^1.11.0: 1.11.0
 packages:
+  /abbrev/1.1.0: d0554c2256636e2f56e7c2e5ad183f859428d81f
+  /ansi-regex/2.1.1: c3b33ab5ee360d86e0e628f0468ae7ef27d654df
+  /ansi-styles/2.2.1: b432dd3358b634cf75e1e4664368240533c1ddbe
+  /anymatch/1.3.0:
+    dependencies:
+      arrify: 1.0.1
+      micromatch: 2.3.11
+    resolution: a3e52fa39168c825ff57b0248126ce5a8ff95507
   /argparse/1.0.9:
     dependencies:
       sprintf-js: 1.0.3
     resolution: 73d83bc263f86e97f8cc4f6bae1b0e90a7d22c86
+  /arr-diff/2.0.0:
+    dependencies:
+      arr-flatten: 1.0.3
+    resolution: 8f3b827f955a8bd669697e4a4256ac3ceae356cf
+  /arr-flatten/1.0.3: a274ed85ac08849b6bd7847c4580745dc51adfb1
+  /array-unique/0.2.1: a1d97ccafcbc2625cc70fadceb36a50c58b01a53
+  /arrify/1.0.1: 898508da2226f380df904728456849c1501a4b0d
+  /async-each/1.0.1: 19d386a1d9edc6e7c1c85d388aedbcc56d33602d
+  /balanced-match/0.4.2: cb3f3e3c732dc0f01ee70b403f302e61d7709838
+  /binary-extensions/1.8.0: 48ec8d16df4377eae5fa5884682480af4d95c774
   /bindings/1.2.1: 14ad6113812d2d37d72e67b4cacb4bb726505f11
+  /brace-expansion/1.1.7:
+    dependencies:
+      balanced-match: 0.4.2
+      concat-map: 0.0.1
+    resolution: 3effc3c50e000531fb720eaff80f0ae8ef23cf59
+  /braces/1.8.5:
+    dependencies:
+      expand-range: 1.8.2
+      preserve: 0.2.0
+      repeat-element: 1.1.2
+    resolution: ba77962e12dff969d6b76711e914b737857bf6a7
+  /buffer-shims/1.0.0: 9978ce317388c649ad8793028c3477ef044a8b51
+  /chalk/1.1.3:
+    dependencies:
+      ansi-styles: 2.2.1
+      escape-string-regexp: 1.0.5
+      has-ansi: 2.0.0
+      strip-ansi: 3.0.1
+      supports-color: 2.0.0
+    resolution: a8115c55e4a702fe4d150abd3872822a7e09fc98
+  /chokidar/1.7.0:
+    dependencies:
+      anymatch: 1.3.0
+      async-each: 1.0.1
+      fsevents: 1.1.1
+      glob-parent: 2.0.0
+      inherits: 2.0.3
+      is-binary-path: 1.0.1
+      is-glob: 2.0.1
+      path-is-absolute: 1.0.1
+      readdirp: 2.1.0
+    resolution: 798e689778151c8076b4b360e5edd28cda2bb468
+  /concat-map/0.0.1: d8a96bd77fd68df7793a73036a3ba0d5405d477b
+  /configstore/1.4.0:
+    dependencies:
+      graceful-fs: 4.1.11
+      mkdirp: 0.5.1
+      object-assign: 4.1.1
+      os-tmpdir: 1.0.2
+      osenv: 0.1.4
+      uuid: 2.0.3
+      write-file-atomic: 1.3.4
+      xdg-basedir: 2.0.0
+    resolution: c35781d0501d268c25c54b8b17f6240e8a4fb021
+  /core-util-is/1.0.2: b5fd54220aa2bc5ab57aab7140c940754503c1a7
+  /debug/2.6.7:
+    dependencies:
+      ms: 2.0.0
+    resolution: 92bad1f6d05bbb6bba22cca88bcd0ec894c2861e
+  /deep-extend/0.4.2: 48b699c27e334bf89f10892be432f6e4c7d34a7f
+  /duplexer/0.1.1: ace6ff808c1ce66b57d1ebf97977acb02334cfc1
+  /duplexify/3.5.0:
+    dependencies:
+      end-of-stream: 1.0.0
+      inherits: 2.0.3
+      readable-stream: 2.2.9
+      stream-shift: 1.0.0
+    resolution: 1aa773002e1578457e9d9d4a50b0ccaaebcbd604
+  /end-of-stream/1.0.0:
+    dependencies:
+      once: 1.3.3
+    resolution: d4596e702734a93e40e9af864319eabd99ff2f0e
+  /es6-promise/3.3.1: a08cdde84ccdbf34d027a1451bc91d4bcd28a613
+  /escape-string-regexp/1.0.5: 1b61c0562190a8dff6ae3bb2cf0200ca130b86d4
   /esprima/3.1.3: fdca51cee6133895e3c88d535ce49dbff62a4633
+  /event-stream/3.3.4:
+    dependencies:
+      duplexer: 0.1.1
+      from: 0.1.7
+      map-stream: 0.1.0
+      pause-stream: 0.0.11
+      split: 0.3.3
+      stream-combiner: 0.0.4
+      through: 2.3.8
+    resolution: 4ab4c9a0f5a54db9338b4c34d86bfce8f4b35571
+  /expand-brackets/0.1.5:
+    dependencies:
+      is-posix-bracket: 0.1.1
+    resolution: df07284e342a807cd733ac5af72411e581d1177b
+  /expand-range/1.8.2:
+    dependencies:
+      fill-range: 2.2.3
+    resolution: a299effd335fe2721ebae8e257ec79644fc85337
+  /extglob/0.3.2:
+    dependencies:
+      is-extglob: 1.0.0
+    resolution: 2e18ff3d2f49ab2765cec9023f011daa8d8349a1
+  /filename-regex/2.0.1: c1c4b9bee3e09725ddb106b75c1e301fe2f18b26
+  /fill-range/2.2.3:
+    dependencies:
+      is-number: 2.1.0
+      isobject: 2.1.0
+      randomatic: 1.1.6
+      repeat-element: 1.1.2
+      repeat-string: 1.6.1
+    resolution: 50b77dfd7e469bc7492470963699fe7a8485a723
+  /for-in/1.0.2: 81068d295a8142ec0ac726c6e2200c30fb6d5e80
+  /for-own/0.1.5:
+    dependencies:
+      for-in: 1.0.2
+    resolution: 5265c681a4f294dabbf17c9509b6763aa84510ce
+  /from/0.1.7: 83c60afc58b9c56997007ed1a768b3ab303a44fe
+  /fsevents/1.1.1:
+    dependencies:
+      nan: 2.6.2
+    resolution: f19fd28f43eeaf761680e519a203c4d0b3d31aff
+  /glob-base/0.3.0:
+    dependencies:
+      glob-parent: 2.0.0
+      is-glob: 2.0.1
+    resolution: dbb164f6221b1c0b1ccf82aea328b497df0ea3c4
+  /glob-parent/2.0.0:
+    dependencies:
+      is-glob: 2.0.1
+    resolution: 81383d72db054fcccf5336daa902f182f6edbb28
+  /got/3.3.1:
+    dependencies:
+      duplexify: 3.5.0
+      infinity-agent: 2.0.3
+      is-redirect: 1.0.0
+      is-stream: 1.1.0
+      lowercase-keys: 1.0.0
+      nested-error-stacks: 1.0.2
+      object-assign: 3.0.0
+      prepend-http: 1.0.4
+      read-all-stream: 3.1.0
+      timed-out: 2.0.0
+    resolution: e5d0ed4af55fc3eef4d56007769d98192bcb2eca
+  /graceful-fs/4.1.11: 0e8bdfe4d1ddb8854d64e04ea7c00e2a026e5658
+  /has-ansi/2.0.0:
+    dependencies:
+      ansi-regex: 2.1.1
+    resolution: 34f5049ce1ecdf2b0649af3ef24e45ed35416d91
+  /ignore-by-default/1.0.1: 48ca6d72f6c6a3af00a9ad4ae6876be3889e2b09
+  /imurmurhash/0.1.4: 9218b9b2b928a238b13dc4fb6b6d576f231453ea
+  /infinity-agent/2.0.3: 45e0e2ff7a9eb030b27d62b74b3744b7a7ac4216
+  /inherits/2.0.3: 633c2c83e3da42a502f52466022480f4208261de
+  /ini/1.3.4: 0537cb79daf59b59a1a517dff706c86ec039162e
+  /is-binary-path/1.0.1:
+    dependencies:
+      binary-extensions: 1.8.0
+    resolution: 75f16642b480f187a711c814161fd3a4a7655898
+  /is-buffer/1.1.5: 1f3b26ef613b214b88cbca23cc6c01d87961eecc
+  /is-dotfile/1.0.2: 2c132383f39199f8edc268ca01b9b007d205cc4d
+  /is-equal-shallow/0.1.3:
+    dependencies:
+      is-primitive: 2.0.0
+    resolution: 2238098fc221de0bcfa5d9eac4c45d638aa1c534
+  /is-extendable/0.1.1: 62b110e289a471418e3ec36a617d472e301dfc89
+  /is-extglob/1.0.0: ac468177c4943405a092fc8f29760c6ffc6206c0
+  /is-finite/1.0.2:
+    dependencies:
+      number-is-nan: 1.0.1
+    resolution: cc6677695602be550ef11e8b4aa6305342b6d0aa
+  /is-glob/2.0.1:
+    dependencies:
+      is-extglob: 1.0.0
+    resolution: d096f926a3ded5600f3fdfd91198cb0888c2d863
+  /is-npm/1.0.0: f2fb63a65e4905b406c86072765a1a4dc793b9f4
+  /is-number/2.1.0:
+    dependencies:
+      kind-of: 3.2.2
+    resolution: 01fcbbb393463a548f2f466cce16dece49db908f
+  /is-posix-bracket/0.1.1: 3334dc79774368e92f016e6fbc0a88f5cd6e6bc4
+  /is-primitive/2.0.0: 207bab91638499c07b2adf240a41a87210034575
+  /is-redirect/1.0.0: 1d03dded53bd8db0f30c26e4f95d36fc7c87dc24
+  /is-stream/1.1.0: 12d4a3dd4e68e0b79ceb8dbc84173ae80d91ca44
+  /isarray/1.0.0: bb935d48582cba168c06834957a54a3e07124f11
+  /isobject/2.1.0:
+    dependencies:
+      isarray: 1.0.0
+    resolution: f065561096a3f1da2ef46272f815c840d87e0c89
   /js-yaml/3.8.4:
     dependencies:
       argparse: 1.0.9
       esprima: 3.1.3
     resolution: 520b4564f86573ba96662af85a8cafa7b4b5a6f6
+  /kind-of/3.2.2:
+    dependencies:
+      is-buffer: 1.1.5
+    resolution: 31ea21a734bab9bbb0f32466d893aea51e4a3c64
+  /latest-version/1.0.1:
+    dependencies:
+      package-json: 1.2.0
+    resolution: 72cfc46e3e8d1be651e1ebb54ea9f6ea96f374bb
+  /lodash._baseassign/3.2.0:
+    dependencies:
+      lodash._basecopy: 3.0.1
+      lodash.keys: 3.1.2
+    resolution: 8c38a099500f215ad09e59f1722fd0c52bfe0a4e
+  /lodash._basecopy/3.0.1: 8da0e6a876cf344c0ad8a54882111dd3c5c7ca36
+  /lodash._bindcallback/3.0.1: e531c27644cf8b57a99e17ed95b35c748789392e
+  /lodash._createassigner/3.1.1:
+    dependencies:
+      lodash._bindcallback: 3.0.1
+      lodash._isiterateecall: 3.0.9
+      lodash.restparam: 3.6.1
+    resolution: 838a5bae2fdaca63ac22dee8e19fa4e6d6970b11
+  /lodash._getnative/3.9.1: 570bc7dede46d61cdcde687d65d3eecbaa3aaff5
+  /lodash._isiterateecall/3.0.9: 5203ad7ba425fae842460e696db9cf3e6aac057c
+  /lodash.assign/3.2.0:
+    dependencies:
+      lodash._baseassign: 3.2.0
+      lodash._createassigner: 3.1.1
+      lodash.keys: 3.1.2
+    resolution: 3ce9f0234b4b2223e296b8fa0ac1fee8ebca64fa
+  /lodash.defaults/3.1.2:
+    dependencies:
+      lodash.assign: 3.2.0
+      lodash.restparam: 3.6.1
+    resolution: c7308b18dbf8bc9372d701a73493c61192bd2e2c
+  /lodash.isarguments/3.1.0: 2f573d85c6a24289ff00663b491c1d338ff3458a
+  /lodash.isarray/3.0.4: 79e4eb88c36a8122af86f844aa9bcd851b5fbb55
+  /lodash.keys/3.1.2:
+    dependencies:
+      lodash._getnative: 3.9.1
+      lodash.isarguments: 3.1.0
+      lodash.isarray: 3.0.4
+    resolution: 4dbc0472b156be50a0b286855d1bd0b0c656098a
+  /lodash.restparam/3.6.1: 936a4e309ef330a7645ed4145986c85ae5b20805
+  /lowercase-keys/1.0.0: 4e3366b39e7f5457e35f1324bdf6f88d0bfc7306
+  /map-stream/0.1.0: e56aa94c4c8055a16404a0674b78f215f7c8e194
+  /micromatch/2.3.11:
+    dependencies:
+      arr-diff: 2.0.0
+      array-unique: 0.2.1
+      braces: 1.8.5
+      expand-brackets: 0.1.5
+      extglob: 0.3.2
+      filename-regex: 2.0.1
+      is-extglob: 1.0.0
+      is-glob: 2.0.1
+      kind-of: 3.2.2
+      normalize-path: 2.1.1
+      object.omit: 2.0.1
+      parse-glob: 3.0.4
+      regex-cache: 0.4.3
+    resolution: 86677c97d1720b363431d04d0d15293bd38c1565
   /midi/0.9.5:
     dependencies:
       bindings: 1.2.1
       nan: 2.6.2
     resolution: fc323aff3e81b0d4099caeead535ba679c6e9d88
+  /minimatch/3.0.4:
+    dependencies:
+      brace-expansion: 1.1.7
+    resolution: 5166e286457f03306064be5497e8dbb0c3d32083
+  /minimist/0.0.8: 857fcabfc3397d2625b8228262e86aa7a011b05d
+  /minimist/1.2.0: a35008b20f41383eec1fb914f4cd5df79a264284
+  /mkdirp/0.5.1:
+    dependencies:
+      minimist: 0.0.8
+    resolution: 30057438eac6cf7f8c4767f38648d6697d75c903
+  /ms/2.0.0: 5608aeadfc00be6c2901df5f9861788de0d597c8
   /nan/2.6.2: e4ff34e6c95fdfb5aecc08de6596f43605a7db45
+  /nested-error-stacks/1.0.2:
+    dependencies:
+      inherits: 2.0.3
+    resolution: 19f619591519f096769a5ba9a86e6eeec823c3cf
+  /nodemon/1.11.0:
+    dependencies:
+      chokidar: 1.7.0
+      debug: 2.6.7
+      es6-promise: 3.3.1
+      ignore-by-default: 1.0.1
+      lodash.defaults: 3.1.2
+      minimatch: 3.0.4
+      ps-tree: 1.1.0
+      touch: 1.0.0
+      undefsafe: 0.0.3
+      update-notifier: 0.5.0
+    resolution: 226c562bd2a7b13d3d7518b49ad4828a3623d06c
+  /nopt/1.0.10:
+    dependencies:
+      abbrev: 1.1.0
+    resolution: 6ddd21bd2a31417b92727dd585f8a6f37608ebee
+  /normalize-path/2.1.1:
+    dependencies:
+      remove-trailing-separator: 1.0.1
+    resolution: 1ab28b556e198363a8c1a6f7e6fa20137fe6aed9
+  /number-is-nan/1.0.1: 097b602b53422a522c1afb8790318336941a011d
+  /object-assign/3.0.0: 9bedd5ca0897949bca47e7ff408062d549f587f2
+  /object-assign/4.1.1: 2109adc7965887cfc05cbbd442cac8bfbb360863
+  /object.omit/2.0.1:
+    dependencies:
+      for-own: 0.1.5
+      is-extendable: 0.1.1
+    resolution: 1a9c744829f39dbb858c76ca3579ae2a54ebd1fa
+  /once/1.3.3:
+    dependencies:
+      wrappy: 1.0.2
+    resolution: b2e261557ce4c314ec8304f3fa82663e4297ca20
+  /os-homedir/1.0.2: ffbc4988336e0e833de0c168c7ef152121aa7fb3
+  /os-tmpdir/1.0.2: bbe67406c79aa85c5cfec766fe5734555dfa1274
+  /osenv/0.1.4:
+    dependencies:
+      os-homedir: 1.0.2
+      os-tmpdir: 1.0.2
+    resolution: 42fe6d5953df06c8064be6f176c3d05aaaa34644
+  /package-json/1.2.0:
+    dependencies:
+      got: 3.3.1
+      registry-url: 3.1.0
+    resolution: c8ecac094227cdf76a316874ed05e27cc939a0e0
+  /parse-glob/3.0.4:
+    dependencies:
+      glob-base: 0.3.0
+      is-dotfile: 1.0.2
+      is-extglob: 1.0.0
+      is-glob: 2.0.1
+    resolution: b2c376cfb11f35513badd173ef0bb6e3a388391c
+  /path-is-absolute/1.0.1: 174b9268735534ffbc7ace6bf53a5a9e1b5c5f5f
+  /pause-stream/0.0.11:
+    dependencies:
+      through: 2.3.8
+    resolution: fe5a34b0cbce12b5aa6a2b403ee2e73b602f1445
+  /pinkie-promise/2.0.1:
+    dependencies:
+      pinkie: 2.0.4
+    resolution: 2135d6dfa7a358c069ac9b178776288228450ffa
+  /pinkie/2.0.4: 72556b80cfa0d48a974e80e77248e80ed4f7f870
+  /prepend-http/1.0.4: d4f4562b0ce3696e41ac52d0e002e57a635dc6dc
+  /preserve/0.2.0: 815ed1f6ebc65926f865b310c0713bcb3315ce4b
+  /process-nextick-args/1.0.7: 150e20b756590ad3f91093f25a4f2ad8bff30ba3
+  /ps-tree/1.1.0:
+    dependencies:
+      event-stream: 3.3.4
+    resolution: b421b24140d6203f1ed3c76996b4427b08e8c014
+  /randomatic/1.1.6:
+    dependencies:
+      is-number: 2.1.0
+      kind-of: 3.2.2
+    resolution: 110dcabff397e9dcff7c0789ccc0a49adf1ec5bb
+  /rc/1.2.1:
+    dependencies:
+      deep-extend: 0.4.2
+      ini: 1.3.4
+      minimist: 1.2.0
+      strip-json-comments: 2.0.1
+    resolution: 2e03e8e42ee450b8cb3dce65be1bf8974e1dfd95
+  /read-all-stream/3.1.0:
+    dependencies:
+      pinkie-promise: 2.0.1
+      readable-stream: 2.2.9
+    resolution: 35c3e177f2078ef789ee4bfafa4373074eaef4fa
+  /readable-stream/2.2.9:
+    dependencies:
+      buffer-shims: 1.0.0
+      core-util-is: 1.0.2
+      inherits: 2.0.3
+      isarray: 1.0.0
+      process-nextick-args: 1.0.7
+      string_decoder: 1.0.0
+      util-deprecate: 1.0.2
+    resolution: cf78ec6f4a6d1eb43d26488cac97f042e74b7fc8
+  /readdirp/2.1.0:
+    dependencies:
+      graceful-fs: 4.1.11
+      minimatch: 3.0.4
+      readable-stream: 2.2.9
+      set-immediate-shim: 1.0.1
+    resolution: 4ed0ad060df3073300c48440373f72d1cc642d78
+  /regex-cache/0.4.3:
+    dependencies:
+      is-equal-shallow: 0.1.3
+      is-primitive: 2.0.0
+    resolution: 9b1a6c35d4d0dfcef5711ae651e8e9d3d7114145
+  /registry-url/3.1.0:
+    dependencies:
+      rc: 1.2.1
+    resolution: 3d4ef870f73dde1d77f0cf9a381432444e174942
+  /remove-trailing-separator/1.0.1: 615ebb96af559552d4bf4057c8436d486ab63cc4
+  /repeat-element/1.1.2: ef089a178d1483baae4d93eb98b4f9e4e11d990a
+  /repeat-string/1.6.1: 8dcae470e1c88abc2d600fff4a776286da75e637
+  /repeating/1.1.3:
+    dependencies:
+      is-finite: 1.0.2
+    resolution: 3d4114218877537494f97f77f9785fab810fa4ac
+  /semver-diff/2.1.0:
+    dependencies:
+      semver: 5.3.0
+    resolution: 4bbb8437c8d37e4b0cf1a68fd726ec6d645d6d36
+  /semver/5.3.0: 9b2ce5d3de02d17c6012ad326aa6b4d0cf54f94f
+  /set-immediate-shim/1.0.1: 4b2b1b27eb808a9f8dcc481a58e5e56f599f3f61
+  /slide/1.1.6: 56eb027d65b4d2dce6cb2e2d32c4d4afc9e1d707
+  /split/0.3.3:
+    dependencies:
+      through: 2.3.8
+    resolution: cd0eea5e63a211dfff7eb0f091c4133e2d0dd28f
   /sprintf-js/1.0.3: 04e6926f662895354f3dd015203633b857297e2c
+  /stream-combiner/0.0.4:
+    dependencies:
+      duplexer: 0.1.1
+    resolution: 4d5e433c185261dde623ca3f44c586bcf5c4ad14
+  /stream-shift/1.0.0: d5c752825e5367e786f78e18e445ea223a155952
+  /string-length/1.0.1:
+    dependencies:
+      strip-ansi: 3.0.1
+    resolution: 56970fb1c38558e9e70b728bf3de269ac45adfac
+  /string_decoder/1.0.0:
+    dependencies:
+      buffer-shims: 1.0.0
+    resolution: f06f41157b664d86069f84bdbdc9b0d8ab281667
+  /strip-ansi/3.0.1:
+    dependencies:
+      ansi-regex: 2.1.1
+    resolution: 6a385fb8853d952d5ff05d0e8aaf94278dc63dcf
+  /strip-json-comments/2.0.1: 3c531942e908c2697c0ec344858c286c7ca0a60a
+  /supports-color/2.0.0: 535d045ce6b6363fa40117084629995e9df324c7
+  /through/2.3.8: 0dd4c9ffaabc357960b1b724115d7e0e86a2e1f5
+  /timed-out/2.0.0: f38b0ae81d3747d628001f41dafc652ace671c0a
+  /touch/1.0.0:
+    dependencies:
+      nopt: 1.0.10
+    resolution: 449cbe2dbae5a8c8038e30d71fa0ff464947c4de
+  /undefsafe/0.0.3: ecca3a03e56b9af17385baac812ac83b994a962f
+  /update-notifier/0.5.0:
+    dependencies:
+      chalk: 1.1.3
+      configstore: 1.4.0
+      is-npm: 1.0.0
+      latest-version: 1.0.1
+      repeating: 1.1.3
+      semver-diff: 2.1.0
+      string-length: 1.0.1
+    resolution: 07b5dc2066b3627ab3b4f530130f7eddda07a4cc
+  /util-deprecate/1.0.2: 450d4dc9fa70de732762fbd2d4a28981419a0ccf
+  /uuid/2.0.3: 67e2e863797215530dff318e5bf9dcebfd47b21a
+  /wrappy/1.0.2: b5243d8f3ec1aa35f1364605bc0d1036e30ab69f
+  /write-file-atomic/1.3.4:
+    dependencies:
+      graceful-fs: 4.1.11
+      imurmurhash: 0.1.4
+      slide: 1.1.6
+    resolution: f807a4f0b1d9e913ae7a48112e6cc3af1991b45f
+  /xdg-basedir/2.0.0:
+    dependencies:
+      os-homedir: 1.0.2
+    resolution: edbc903cc385fc04523d966a335504b5504d1bd2
 registry: 'https://registry.npmjs.org/'
 version: 2
