Add robotjs to dependencies

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "js-yaml": "^3.8.4",
-    "midi": "^0.9.5"
+    "midi": "^0.9.5",
+    "robotjs": "^0.4.7"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
