Add delay time between messages and define more detailed events

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,11 @@
+delay: 0.15
 input:
   LPD8:
+    144+36+<50:
+      exec: say 'Soft touch'
+    144+36+<50%:
+      exec: say 'Soft percentage'
+    144+36+>50%:
+      exec: say 'Hard percentage'
     144+40:
       exec: say 'Hello world'
