--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "js-yaml": "^3.8.4",
     "midi": "^0.9.5",
     "pm2": "^2.4.6",
-    "robotjs": "^0.4.7"
+    "robotjs": "^0.4.7",
+    "shell-escape": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
