--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,11 +1,11 @@
 createdWith: pnpm@0.68.0
 dependencies:
-  forever@^0.15.3: 0.15.3
   js-yaml@^3.8.4: 3.8.4
   midi@^0.9.5: 0.9.5
   nodemon@^1.11.0: 1.11.0
   pm2@^2.4.6: 2.4.6
   robotjs@^0.4.7: 0.4.7
+  shell-escape@^0.2.0: 0.2.0
 packages:
   /abbrev/1.1.0: d0554c2256636e2f56e7c2e5ad183f859428d81f
   /amp-message/0.1.2:
@@ -43,8 +43,6 @@ packages:
       semver: 5.3.0
       shimmer: 1.1.0
     resolution: 2c899d49a5e8a2dea10b9473915b4149206a1d68
-  /async/0.2.10: b6bbe0b0674b9d719708ca38de8c237cb526c3d1
-  /async/0.2.9: df63060fbf3d33286a76aaf6d55a2986d9ff8619
   /async/1.5.2: ec6a61ae56480c0c3cb241c95618e20892f9672a
   /balanced-match/0.4.2: cb3f3e3c732dc0f01ee70b403f302e61d7709838
   /binary-extensions/1.8.0: 48ec8d16df4377eae5fa5884682480af4d95c774
@@ -65,19 +63,7 @@ packages:
       preserve: 0.2.0
       repeat-element: 1.1.2
     resolution: ba77962e12dff969d6b76711e914b737857bf6a7
-  /broadway/0.3.6:
-    dependencies:
-      cliff: 0.1.9
-      eventemitter2: 0.4.14
-      nconf: 0.6.9
-      utile: 0.2.1
-      winston: 0.8.0
-    resolution: 7dbef068b954b7907925fd544963b578a902ba7a
   /buffer-shims/1.0.0: 9978ce317388c649ad8793028c3477ef044a8b51
-  /caller/0.0.1:
-    dependencies:
-      tape: 2.3.3
-    resolution: f37a1d6ea10e829d94721ae29a90bb4fb52ab767
   /chalk/1.1.3:
     dependencies:
       ansi-styles: 2.2.1
@@ -104,23 +90,8 @@ packages:
     dependencies:
       colors: 1.0.3
     resolution: f53b05266a8b1a0b934b3d0821e6e2dc5914ae23
-  /cliff/0.1.10:
-    dependencies:
-      colors: 1.0.3
-      eyes: 0.1.8
-      winston: 0.8.3
-    resolution: 53be33ea9f59bec85609ee300ac4207603e52013
-  /cliff/0.1.9:
-    dependencies:
-      colors: 0.6.2
-      eyes: 0.1.8
-      winston: 0.8.3
-    resolution: a211e09c6a3de3ba1af27d049d301250d18812bc
-  /clone/1.0.2: 260b7a99ebb1edfe247538175f783243cb19d149
   /code-point-at/1.1.0: 0d070b4d043a5bea33a2f1a40e2edb3d9a4ccf77
-  /colors/0.6.2: 2423fe6678ac0c5dae8852e5d0e5be08c997abcc
   /colors/1.0.3: 0433f44d809680fdeb60ed260f1b0c262e82a40b
-  /colors/1.1.2: 168a4701756b6a7f51a12ce0c97bfa28c084ed63
   /commander/2.9.0:
     dependencies:
       graceful-readlink: 1.0.1
@@ -148,7 +119,6 @@ packages:
     dependencies:
       moment-timezone: 0.5.13
     resolution: 3a86c09b41b8f261ac863a7cc85ea4735857eab2
-  /cycle/1.0.3: 21e80b2be8580f98b468f379430662b046c34ad2
   /debug/2.2.0:
     dependencies:
       ms: 0.7.1
@@ -161,12 +131,8 @@ packages:
     dependencies:
       ms: 2.0.0
     resolution: e731531ca2ede27d188222427da17821d68ff4fc
-  /deep-equal/0.1.2: b246c2b80a570a47c11be1d9bd1070ec878b87ce
-  /deep-equal/1.0.1: f5d260292b660e084eff4cdbc9f08ad3247448b5
   /deep-extend/0.4.2: 48b699c27e334bf89f10892be432f6e4c7d34a7f
-  /defined/0.0.0: f35eea7d705e933baf13b2f03b3f83d921403b3e
   /delegates/1.0.0: 84c6e159b81904fdca59a0ef44cd870d31250f9a
-  /director/1.2.7: bfd3741075fd7fb1a5b2e13658c5f4bec77736f3
   /duplexer/0.1.1: ace6ff808c1ce66b57d1ebf97977acb02334cfc1
   /duplexify/3.5.0:
     dependencies:
@@ -191,10 +157,6 @@ packages:
   /escape-regexp/0.0.1: f44bda12d45bbdf9cb7f862ee7e4827b3dd32254
   /escape-string-regexp/1.0.5: 1b61c0562190a8dff6ae3bb2cf0200ca130b86d4
   /esprima/3.1.3: fdca51cee6133895e3c88d535ce49dbff62a4633
-  /event-stream/0.5.3:
-    dependencies:
-      optimist: 0.2.8
-    resolution: b77b9309f7107addfeab63f0c0eafd8db0bd8c1c
   /event-stream/3.3.4:
     dependencies:
       duplexer: 0.1.1
@@ -221,7 +183,6 @@ packages:
     dependencies:
       is-extglob: 1.0.0
     resolution: 2e18ff3d2f49ab2765cec9023f011daa8d8349a1
-  /eyes/0.1.8: 62cf120234c683785d902348a800ef3e0cc20bc0
   /fclone/1.0.11: 10e85da38bfea7fc599341c296ee1d77266ee640
   /fclone/1.0.8: a0d4a73d983249978c0e0671a161520b996467eb
   /filename-regex/2.0.1: c1c4b9bee3e09725ddb106b75c1e301fe2f18b26
@@ -233,44 +194,11 @@ packages:
       repeat-element: 1.1.2
       repeat-string: 1.6.1
     resolution: 50b77dfd7e469bc7492470963699fe7a8485a723
-  /flatiron/0.4.3:
-    dependencies:
-      broadway: 0.3.6
-      director: 1.2.7
-      optimist: 0.6.0
-      prompt: 0.2.14
-    resolution: 248cf79a3da7d7dc379e2a11c92a2719cbb540f6
   /for-in/1.0.2: 81068d295a8142ec0ac726c6e2200c30fb6d5e80
   /for-own/0.1.5:
     dependencies:
       for-in: 1.0.2
     resolution: 5265c681a4f294dabbf17c9509b6763aa84510ce
-  /forever-monitor/1.7.1:
-    dependencies:
-      broadway: 0.3.6
-      chokidar: 1.7.0
-      minimatch: 3.0.4
-      ps-tree: 0.0.3
-      utile: 0.2.1
-    resolution: 5d820f4a3a78db2d81ae2671f158b9e86a091bb8
-  /forever/0.15.3:
-    dependencies:
-      cliff: 0.1.10
-      clone: 1.0.2
-      colors: 0.6.2
-      flatiron: 0.4.3
-      forever-monitor: 1.7.1
-      nconf: 0.6.9
-      nssocket: 0.5.3
-      object-assign: 3.0.0
-      optimist: 0.6.1
-      path-is-absolute: 1.0.1
-      prettyjson: 1.2.1
-      shush: 1.0.0
-      timespan: 2.3.0
-      utile: 0.2.1
-      winston: 0.8.3
-    resolution: 77d9d7e15fd2f511ad9d84a110c7dd8fc8ecebc2
   /from/0.1.7: 83c60afc58b9c56997007ed1a768b3ab303a44fe
   /fs.realpath/1.0.0: 1504ad2523158caa40db4a2787cb01411994ea4f
   /fsevents/1.1.1:
@@ -327,7 +255,6 @@ packages:
       ansi-regex: 2.1.1
     resolution: 34f5049ce1ecdf2b0649af3ef24e45ed35416d91
   /has-unicode/2.0.1: e0e6fe6a28cf51138855e086d1691e771de2a8b9
-  /i/0.3.5: 1d2b854158ec8169113c6cb7f6b6801e99e211d5
   /ignore-by-default/1.0.1: 48ca6d72f6c6a3af00a9ad4ae6876be3889e2b09
   /imurmurhash/0.1.4: 9218b9b2b928a238b13dc4fb6b6d576f231453ea
   /infinity-agent/2.0.3: 45e0e2ff7a9eb030b27d62b74b3744b7a7ac4216
@@ -378,14 +305,12 @@ packages:
     dependencies:
       isarray: 1.0.0
     resolution: f065561096a3f1da2ef46272f815c840d87e0c89
-  /isstream/0.1.2: 47e63f7af55afa6f92e1500e690eb8b8529c099a
   /js-yaml/3.8.4:
     dependencies:
       argparse: 1.0.9
       esprima: 3.1.3
     resolution: 520b4564f86573ba96662af85a8cafa7b4b5a6f6
   /json-stringify-safe/5.0.1: 1296a2d58fd45f19a0f6ce01d65701e2c735b6eb
-  /jsonify/0.0.0: 2c74b6ee41d93ca51b7b5aaee8f503631d252a73
   /kind-of/3.2.2:
     dependencies:
       is-buffer: 1.1.5
@@ -461,7 +386,6 @@ packages:
     dependencies:
       brace-expansion: 1.1.7
     resolution: 5166e286457f03306064be5497e8dbb0c3d32083
-  /minimist/0.0.10: de3f98543dbf96082be48ad1a0c7cda836301dcf
   /minimist/0.0.8: 857fcabfc3397d2625b8228262e86aa7a011b05d
   /minimist/1.2.0: a35008b20f41383eec1fb914f4cd5df79a264284
   /mkdirp/0.5.1:
@@ -475,15 +399,7 @@ packages:
   /moment/2.18.1: c36193dd3ce1c2eed2adb7c802dbbc77a81b1c0f
   /ms/0.7.1: 9cd13c03adbff25b65effde7ce864ee952017098
   /ms/2.0.0: 5608aeadfc00be6c2901df5f9861788de0d597c8
-  /mute-stream/0.0.7: 3075ce93bc21b8fab43e1bc4da7e8115ed1e7bab
   /nan/2.6.2: e4ff34e6c95fdfb5aecc08de6596f43605a7db45
-  /nconf/0.6.9:
-    dependencies:
-      async: 0.2.9
-      ini: 1.3.4
-      optimist: 0.6.0
-    resolution: 9570ef15ed6f9ae6b2b3c8d5e71b66d3193cd661
-  /ncp/0.4.2: abcc6cbd3ec2ed2a729ff6e7c1fa8f01784a8574
   /nested-error-stacks/1.0.2:
     dependencies:
       inherits: 2.0.3
@@ -518,11 +434,6 @@ packages:
       gauge: 2.7.4
       set-blocking: 2.0.0
     resolution: dc59bee85f64f00ed424efb2af0783df25d1c0b5
-  /nssocket/0.5.3:
-    dependencies:
-      eventemitter2: 0.4.14
-      lazy: 1.0.11
-    resolution: 883ca2ec605f5ed64a4d5190b2625401928f8f8d
   /nssocket/0.6.0:
     dependencies:
       eventemitter2: 0.4.14
@@ -544,20 +455,6 @@ packages:
     dependencies:
       wrappy: 1.0.2
     resolution: 583b1aa775961d4b113ac17d9c50baef9dd76bd1
-  /optimist/0.2.8:
-    dependencies:
-      wordwrap: 0.0.3
-    resolution: e981ab7e268b457948593b55674c099a815cac31
-  /optimist/0.6.0:
-    dependencies:
-      minimist: 0.0.10
-      wordwrap: 0.0.3
-    resolution: 69424826f3405f79f142e6fc3d9ae58d4dbb9200
-  /optimist/0.6.1:
-    dependencies:
-      minimist: 0.0.10
-      wordwrap: 0.0.3
-    resolution: da3ea74686fa21a19a111c326e90eb15a0196686
   /os-homedir/1.0.2: ffbc4988336e0e833de0c168c7ef152121aa7fb3
   /os-tmpdir/1.0.2: bbe67406c79aa85c5cfec766fe5734555dfa1274
   /osenv/0.1.4:
@@ -589,8 +486,6 @@ packages:
       pinkie: 2.0.4
     resolution: 2135d6dfa7a358c069ac9b178776288228450ffa
   /pinkie/2.0.4: 72556b80cfa0d48a974e80e77248e80ed4f7f870
-  /pkginfo/0.3.1: 5b29f6a81f70717142e09e765bbeab97b4f81e21
-  /pkginfo/0.4.0: 349dbb7ffd38081fcadc0853df687f0c7744cd65
   /pm2-axon-rpc/0.4.5:
     dependencies:
       debug: 2.6.8
@@ -666,24 +561,7 @@ packages:
     resolution: d9ae0ca85330e03962d93292f95a8b44c2ebf505
   /prepend-http/1.0.4: d4f4562b0ce3696e41ac52d0e002e57a635dc6dc
   /preserve/0.2.0: 815ed1f6ebc65926f865b310c0713bcb3315ce4b
-  /prettyjson/1.2.1:
-    dependencies:
-      colors: 1.1.2
-      minimist: 1.2.0
-    resolution: fcffab41d19cab4dfae5e575e64246619b12d289
   /process-nextick-args/1.0.7: 150e20b756590ad3f91093f25a4f2ad8bff30ba3
-  /prompt/0.2.14:
-    dependencies:
-      pkginfo: 0.4.0
-      read: 1.0.7
-      revalidator: 0.1.8
-      utile: 0.2.1
-      winston: 0.8.3
-    resolution: 57754f64f543fd7b0845707c818ece618f05ffdc
-  /ps-tree/0.0.3:
-    dependencies:
-      event-stream: 0.5.3
-    resolution: dbf8d752a7fe22fa7d58635689499610e9276ddc
   /ps-tree/1.1.0:
     dependencies:
       event-stream: 3.3.4
@@ -710,10 +588,6 @@ packages:
       pinkie-promise: 2.0.1
       readable-stream: 2.2.9
     resolution: 35c3e177f2078ef789ee4bfafa4373074eaef4fa
-  /read/1.0.7:
-    dependencies:
-      mute-stream: 0.0.7
-    resolution: b3da19bd052431a97671d44a42634adf710b40c4
   /readable-stream/2.2.9:
     dependencies:
       buffer-shims: 1.0.0
@@ -755,15 +629,6 @@ packages:
     dependencies:
       path-parse: 1.0.5
     resolution: 655907c3469a8680dc2de3a275a8fdd69691f0e5
-  /resumer/0.0.0:
-    dependencies:
-      through: 2.3.8
-    resolution: f1e8f461e4064ba39e82af3cdc2a8c893d076759
-  /revalidator/0.1.8: fece61bfa0c1b52a206bd6b18198184bdd523a3b
-  /rimraf/2.6.1:
-    dependencies:
-      glob: 7.1.2
-    resolution: c2338ec643df7a1b7fe5c54fa86f57428a55f33d
   /robotjs/0.4.7:
     dependencies:
       nan: 2.6.2
@@ -777,6 +642,7 @@ packages:
   /semver/5.3.0: 9b2ce5d3de02d17c6012ad326aa6b4d0cf54f94f
   /set-blocking/2.0.0: 045f9782d011ae9a6803ddd382b24392b3d890f7
   /set-immediate-shim/1.0.1: 4b2b1b27eb808a9f8dcc481a58e5e56f599f3f61
+  /shell-escape/0.2.0: 68fd025eb0490b4f567a027f0bf22480b5f84133
   /shelljs/0.7.7:
     dependencies:
       glob: 7.1.2
@@ -785,11 +651,6 @@ packages:
     resolution: b2f5c77ef97148f4b4f6e22682e10bba8667cff1
   /shimmer/1.0.0: 49c2d71c678360b802be18b278382d1cbb805c39
   /shimmer/1.1.0: 97d7377137ffbbab425522e429fe0aa89a488b35
-  /shush/1.0.0:
-    dependencies:
-      caller: 0.0.1
-      strip-json-comments: 0.1.3
-    resolution: c27415a9e458f2fed39b27cf8eb37c003782b431
   /signal-exit/3.0.2: b5fdc08f1287ea1178628e415e25132b73646c6d
   /simple-get/1.4.3:
     dependencies:
@@ -808,7 +669,6 @@ packages:
       through: 2.3.8
     resolution: cd0eea5e63a211dfff7eb0f091c4133e2d0dd28f
   /sprintf-js/1.0.3: 04e6926f662895354f3dd015203633b857297e2c
-  /stack-trace/0.0.10: 547c70b347e8d32b4e108ea1a2a159e5fdde19c0
   /stream-combiner/0.0.4:
     dependencies:
       duplexer: 0.1.1
@@ -832,18 +692,8 @@ packages:
     dependencies:
       ansi-regex: 2.1.1
     resolution: 6a385fb8853d952d5ff05d0e8aaf94278dc63dcf
-  /strip-json-comments/0.1.3: 164c64e370a8a3cc00c9e01b539e569823f0ee54
   /strip-json-comments/2.0.1: 3c531942e908c2697c0ec344858c286c7ca0a60a
   /supports-color/2.0.0: 535d045ce6b6363fa40117084629995e9df324c7
-  /tape/2.3.3:
-    dependencies:
-      deep-equal: 0.1.2
-      defined: 0.0.0
-      inherits: 2.0.3
-      jsonify: 0.0.0
-      resumer: 0.0.0
-      through: 2.3.8
-    resolution: 2e7ce0a31df09f8d6851664a71842e0ca5057af7
   /tar-fs/1.15.2:
     dependencies:
       chownr: 1.0.1
@@ -860,7 +710,6 @@ packages:
     resolution: 36549cf04ed1aee9b2a30c0143252238daf94016
   /through/2.3.8: 0dd4c9ffaabc357960b1b724115d7e0e86a2e1f5
   /timed-out/2.0.0: f38b0ae81d3747d628001f41dafc652ace671c0a
-  /timespan/2.3.0: 4902ce040bd13d845c8f59b27e9d59bad6f39929
   /touch/1.0.0:
     dependencies:
       nopt: 1.0.10
@@ -880,15 +729,6 @@ packages:
       string-length: 1.0.1
     resolution: 07b5dc2066b3627ab3b4f530130f7eddda07a4cc
   /util-deprecate/1.0.2: 450d4dc9fa70de732762fbd2d4a28981419a0ccf
-  /utile/0.2.1:
-    dependencies:
-      async: 0.2.10
-      deep-equal: 1.0.1
-      i: 0.3.5
-      mkdirp: 0.5.1
-      ncp: 0.4.2
-      rimraf: 2.6.1
-    resolution: 930c88e99098d6220834c356cbd9a770522d90d7
   /uuid/2.0.3: 67e2e863797215530dff318e5bf9dcebfd47b21a
   /uuid/3.0.1: 6544bba2dfda8c1cf17e629a3a305e2bb1fee6c1
   /vizion/0.2.13:
@@ -913,26 +753,6 @@ packages:
     dependencies:
       string-width: 1.0.2
     resolution: 571e0f1b0604636ebc0dfc21b0339bbe31341710
-  /winston/0.8.0:
-    dependencies:
-      async: 0.2.10
-      colors: 0.6.2
-      cycle: 1.0.3
-      eyes: 0.1.8
-      pkginfo: 0.3.1
-      stack-trace: 0.0.10
-    resolution: 61d0830fa699706212206b0a2b5ca69a93043668
-  /winston/0.8.3:
-    dependencies:
-      async: 0.2.10
-      colors: 0.6.2
-      cycle: 1.0.3
-      eyes: 0.1.8
-      isstream: 0.1.2
-      pkginfo: 0.3.1
-      stack-trace: 0.0.10
-    resolution: 64b6abf4cd01adcaefd5009393b1d8e8bec19db0
-  /wordwrap/0.0.3: a3d5da6cd5c0bc0008d37234bbaf1bed63059107
   /wrappy/1.0.2: b5243d8f3ec1aa35f1364605bc0d1036e30ab69f
   /write-file-atomic/1.3.4:
     dependencies:
