--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -5,6 +5,7 @@ dependencies:
   nodemon@^1.11.0: 1.11.0
   pm2@^2.4.6: 2.4.6
   robotjs@^0.4.7: 0.4.7
+  segfault-handler@^1.0.0: 1.0.0
   shell-escape@^0.2.0: 0.2.0
 packages:
   /abbrev/1.1.0: d0554c2256636e2f56e7c2e5ad183f859428d81f
@@ -635,6 +636,11 @@ packages:
       prebuild-install: 2.1.2
     resolution: b2d20311381d7e76665417c0ac66882e69f78132
   /safe-buffer/5.0.1: d263ca54696cd8a306b5ca6551e92de57918fbe7
+  /segfault-handler/1.0.0:
+    dependencies:
+      bindings: 1.2.1
+      nan: 2.6.2
+    resolution: 9de52bc4cb54169350f0f4295772fc245288f193
   /semver-diff/2.1.0:
     dependencies:
       semver: 5.3.0
