--- a/config.yml
+++ b/config.yml
@@ -3,5 +3,9 @@ input:
   LPD8:
     144+37+[30-50%]:
       exec: say 'Ok'
+    144+36:
+      open: /Applications/Google Chrome.app
+    144+41:
+      open: /Applications/iTerm.app
     144+40:
       open: /Applications/Atom Beta.app
